--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,14 +6,18 @@
 - clean: ['~', '~/.config']
 
 - link:
-    ~/.config/: 
-        glob: true
-        relink: true
-        path: config/*
+#     ~/.config/: 
+#         glob: true
+#         relink: true
+#         path: config/*
     # Link if machine does not have nvim
     ~/.vimrc: 
         relink: true
         path: config/nvim/init.vim
+    ~/.config/neofetch: config/neofetch
+    ~/.config/nvim:
+          relink: true
+          path: config/nvim
     ~/.ssh/config: ssh_config
 
 - shell:
