--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -4,32 +4,32 @@ print_info() {
     info title
     info underline
 
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Memory" memory
+    info "${c1} " distro
+    info "${c2} " model
+    info "${c3} " kernel
+    info "${c4} " uptime
+    info "${c5} " packages
+    info "${c6} " shell
+    info "${c1} " resolution
+    # info "DE" de
+    info "${c2} " wm
+    info "${c3} " wm_theme
+    info "${c4} " theme
+    info "${c5} " icons
+    info "${c6} " term
+    # info "Fonts" term_font
+    info "${c1} " cpu
+    info "${c2} " gpu
+    info "${c3} " memory
 
-    info "GPU Driver" gpu_driver  # Linux/macOS only
-    info "CPU Usage" cpu_usage
-    info "Disk" disk
-    info "Battery" battery
-    info "Font" font
-    info "Song" song
-    [[ "$player" ]] && prin "Music Player" "$player"
-    info "Local IP" local_ip
+    # info "GPU Driver" gpu_driver  # Linux/macOS only
+    # info "CPU Usage" cpu_usage
+    # info "Disk" disk
+    # info "Battery" battery
+    # info "Font" font
+    # info "Song" song
+    # [[ "$player" ]] && prin "Music Player" "$player"
+    # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
@@ -37,8 +37,7 @@ print_info() {
     info cols
 }
 
-# Title
-
+##--------- Title
 
 # Hide/Show Fully qualified domain name.
 #
@@ -48,8 +47,7 @@ print_info() {
 title_fqdn="off"
 
 
-# Kernel
-
+##--------- Kernel
 
 # Shorten the output of the kernel function.
 #
@@ -64,8 +62,7 @@ title_fqdn="off"
 kernel_shorthand="on"
 
 
-# Distro
-
+##--------- Distro
 
 # Shorten the output of the distro function
 #
@@ -88,8 +85,7 @@ distro_shorthand="off"
 os_arch="on"
 
 
-# Uptime
-
+##--------- Uptime
 
 # Shorten the output of the uptime function
 #
@@ -104,8 +100,7 @@ os_arch="on"
 uptime_shorthand="on"
 
 
-# Memory
-
+##--------- Memory
 
 # Show memory pecentage in output.
 #
@@ -116,7 +111,7 @@ uptime_shorthand="on"
 # Example:
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
-memory_percent="on"
+memory_percent="off"
 
 # Change memory output unit.
 #
@@ -131,8 +126,7 @@ memory_percent="on"
 memory_unit="mib"
 
 
-# Packages
-
+##--------- Packages
 
 # Show/Hide Package Manager names.
 #
@@ -147,8 +141,7 @@ memory_unit="mib"
 package_managers="on"
 
 
-# Shell
-
+##--------- Shell
 
 # Show the path to $SHELL
 #
@@ -173,8 +166,7 @@ shell_path="off"
 shell_version="on"
 
 
-# CPU
-
+##--------- CPU
 
 # CPU speed type
 #
@@ -252,8 +244,7 @@ cpu_cores="logical"
 cpu_temp="off"
 
 
-# GPU
-
+##--------- GPU
 
 # Enable/Disable GPU Brand
 #
@@ -286,8 +277,7 @@ gpu_brand="on"
 gpu_type="all"
 
 
-# Resolution
-
+##--------- Resolution
 
 # Display refresh rate next to each monitor
 # Default: 'off'
@@ -301,8 +291,7 @@ gpu_type="all"
 refresh_rate="off"
 
 
-# Gtk Theme / Icons / Font
-
+##--------- Gtk Theme / Icons / Font
 
 # Shorten output of GTK Theme / Icons / Font
 #
@@ -314,7 +303,6 @@ refresh_rate="off"
 # on:  'Numix, Adwaita'
 # off: 'Numix [GTK2], Adwaita [GTK3]'
 gtk_shorthand="off"
-
 
 # Enable/Disable gtk2 Theme / Icons / Font
 #
@@ -339,8 +327,7 @@ gtk2="on"
 gtk3="on"
 
 
-# IP Address
-
+##--------- IP Address
 
 # Website to ping for the public IP
 #
@@ -356,9 +343,7 @@ public_ip_host="http://ident.me"
 # Flag:    --ip_timeout
 public_ip_timeout=2
 
-
 # Desktop Environment
-
 
 # Show Desktop Environment version
 #
@@ -368,8 +353,7 @@ public_ip_timeout=2
 de_version="on"
 
 
-# Disk
-
+##--------- Disk
 
 # Which disks to display.
 # The values can be any /dev/sdXX, mount point or directory.
@@ -426,8 +410,7 @@ disk_subtitle="mount"
 disk_percent="on"
 
 
-# Song
-
+##--------- Song
 
 # Manually specify a music player.
 #
@@ -511,8 +494,7 @@ song_shorthand="off"
 mpc_args=()
 
 
-# Text Colors
-
+##--------- Text Colors
 
 # Text Colors
 #
@@ -529,8 +511,7 @@ mpc_args=()
 colors=(distro)
 
 
-# Text Options
-
+##--------- Text Options
 
 # Toggle bold text
 #
@@ -551,8 +532,7 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="-"
-
+underline_char=""
 
 # Info Separator
 # Replace the default separator with the specified string.
@@ -563,11 +543,10 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator=" ·"
 
 
-# Color Blocks
-
+##--------- Color Blocks
 
 # Color block range
 # The range of colors to print.
@@ -620,8 +599,7 @@ block_height=1
 # col_offset=7      - Leave 7 spaces then print the colors
 col_offset="auto"
 
-# Progress Bars
-
+##--------- Progress Bars
 
 # Bar characters
 #
@@ -663,7 +641,6 @@ bar_length=15
 bar_color_elapsed="distro"
 bar_color_total="distro"
 
-
 # Info display
 # Display a bar with the info.
 #
@@ -685,8 +662,7 @@ battery_display="off"
 disk_display="off"
 
 
-# Backend Settings
-
+##--------- Backend Settings
 
 # Image backend.
 #
@@ -711,8 +687,7 @@ image_backend="ascii"
 image_source="auto"
 
 
-# Ascii Options
-
+##--------- Ascii Options
 
 # Ascii distro
 # Which distro's ascii art to display.
@@ -782,8 +757,7 @@ ascii_colors=(distro)
 ascii_bold="on"
 
 
-# Image Options
-
+##--------- Image Options
 
 # Image loop
 # Setting this to on will make neofetch redraw the image constantly until
@@ -833,7 +807,7 @@ image_size="auto"
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=3
+gap=2
 
 # Image offsets
 # Only works with the w3m backend.
@@ -854,7 +828,7 @@ xoffset=0
 background_color=
 
 
-# Misc Options
+##--------- Misc Options
 
 # Stdout mode
 # Turn off all colors and disables image backend (ASCII/Image).
