--- a/config/bspwm/picom.conf
+++ b/config/bspwm/picom.conf
@@ -3,20 +3,20 @@
 
 #========================= Corners =========================#
 
-corner-radius = 0;
+corner-radius = 15.0;
 rounded-corners-exclude = [
-	"window_type = 'normal'",
-	"class_g ?= 'rofi'",
+	# "window_type = 'normal'",
+	# "class_g ?= 'rofi'",
 	"class_g ?= 'polybar'",
 	"class_g ?= 'tint2'"
 ];
 
-round-borders = 0;
+round-borders = 2;
 round-borders-exclude = [
 	"class_g = 'TelegramDesktop'"
 ];
 
-# Specify a list of border width rules, in the format `PIXELS:PATTERN`, 
+# Specify a list of border width rules, in the format `PIXELS:PATTERN`,
 # Note we don't make any guarantee about possible conflicts with the
 # border_width set by the window manager.
 #
@@ -177,7 +177,7 @@ opacity-rule = [
   "100:class_g    = 'XTerm'",
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
-  "100:class_g    = 'Alacritty'",
+  "90:class_g    = 'Alacritty'",
   "100:class_g    = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
@@ -190,8 +190,10 @@ opacity-rule = [
 #========================= Blurring =========================#
 
 blur: {
-  method = "none";
-  strength = 0;
+  method = "dual_kawase";
+  strength = 10;
+  deviation = 0.5;
+  kernel = "11x11gaussian"
   background = false;
   background-frame = false;
   background-fixed = false;
@@ -216,7 +218,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 #experimental-backends = true;
-backend = "xrender";
+backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
