--- a/config/bspwm/picom.conf
+++ b/config/bspwm/picom.conf
@@ -7,12 +7,14 @@ corner-radius = 15.0;
 rounded-corners-exclude = [
 	# "window_type = 'normal'",
 	# "class_g ?= 'rofi'",
-	"class_g ?= 'polybar'",
-	"class_g ?= 'tint2'"
+	# "class_g ?= 'polybar'",
+	"class_g ?= 'tint2'",
+	"class_g ?= 'dunst'"
 ];
 
 round-borders = 2;
 round-borders-exclude = [
+  "window_type ?= 'fullscreen'",
 	"class_g = 'TelegramDesktop'"
 ];
 
@@ -178,7 +180,7 @@ opacity-rule = [
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
   "90:class_g    = 'Alacritty'",
-  "100:class_g    = 'Polybar'",
+  "90:class_g    = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
   "100:class_g    = 'TelegramDesktop'",
