--- a/config/bspwm/picom.conf
+++ b/config/bspwm/picom.conf
@@ -176,10 +176,13 @@ focus-exclude = [
 opacity-rule = [
   "100:class_g    = 'Bar'",            # lemonbar
   "100:class_g    = 'slop'",           # maim
-  "100:class_g    = 'XTerm'",
-  "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
+  "90:class_g    = 'XTerm'",
+  "90:class_g    = 'URxvt'",
+  "90:class_g    = 'kitty'",
   "90:class_g    = 'Alacritty'",
+  "85:class_g    = 'alacritty-float'",
+  "60:class_g    = 'Music'",
+  "90:class_g    = 'Fullscreen'",
   "90:class_g    = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
