--- a/config/bspwm/picom.conf
+++ b/config/bspwm/picom.conf
@@ -138,7 +138,7 @@ no-fading-destroyed-argb = true
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 1;
+inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -181,7 +181,9 @@ opacity-rule = [
   "90:class_g    = 'kitty'",
   "90:class_g    = 'Alacritty'",
   "85:class_g    = 'alacritty-float'",
+  "70:class_g    = 'Rofi'",
   "60:class_g    = 'Music'",
+  "80:class_g    = 'discord'",
   "90:class_g    = 'Fullscreen'",
   "90:class_g    = 'Polybar'",
   "100:class_g    = 'code-oss'",
@@ -421,7 +423,7 @@ log-level = "info";
 wintypes:
 {
   tooltip = { fade=true; shadow=true; opacity=0.95; focus=true; full-shadow=false; };
-  popup_menu = { opacity=1.0; }
+  popup_menu = { opacity=0.8; }
   dropdown_menu = { opacity=1.0; }
   utility = { shadow=false; opacity=1.0; }
 };
