--- a/config/bspwm/picom.conf
+++ b/config/bspwm/picom.conf
@@ -86,6 +86,7 @@ shadow-exclude = [
     "name *= 'VLC'",
     "name *= 'Chromium'",
     "name *= 'Chrome'",
+    "name = 'cpt_frame_xcb_window'",
     "class_g = 'Conky'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
