--- a/config/bspwm/polybar/config
+++ b/config/bspwm/polybar/config
@@ -21,10 +21,10 @@ override-redirect = false
 bottom = false
 fixed-center = true
 
-width = 98%
+width = 100%
 height = 24
-offset-x = 1%
-offset-y = 0.5%
+offset-x = 0
+offset-y = 0.1%
 
 background = ${color.BACKGROUND}
 foreground = ${color.FOREGROUND}
@@ -35,12 +35,14 @@ radius-bottom = 0.0
 line-size = 2
 line-color = ${color.BLUE}
 
-border-size = 4
+border-size = 3
 border-color = ${color.BACKGROUND}
 
 padding = 1
 module-margin-left = 0
 module-margin-right = 0
+module-margin-top = 0
+module-margin-bottom = 0
 
 font-0 = "Iosevka Nerd Font:size=10;3"
 font-1 = "Iosevka Nerd Font:size=12;3"
