Porting configs from nixos

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,21 +14,24 @@
     ~/.vimrc:
           relink: true
           path: config/nvim/init.vim
+    ~/.config/mutt:
+          relink: true
+          path: config/mutt
     ~/.config/neofetch: config/neofetch
     ~/.config/nvim:
           relink: true
           path: config/nvim
     # BSPWM Configs and all the utilities
-    ~/.config/bspwm:
-          glob: true
-          relink: true
-          exclude: [ config/bspwm/themes ]
-          path: config/bspwm/*
-    ~/.config/bspwm/themes/uwu.bash:
-          create: true
-          force: true
-          relink: true
-          path: config/bspwm/themes/uwu.bash
+    ## ~/.config/bspwm:
+    ##       glob: true
+    ##       relink: true
+    ##       exclude: [ config/bspwm/themes ]
+    ##       path: config/bspwm/*
+    ## ~/.config/bspwm/themes/uwu.bash:
+    ##       create: true
+    ##       force: true
+    ##       relink: true
+    ##       path: config/bspwm/themes/uwu.bash
 
     # SSH config, comment this if you don't wanna reuse personal ssh configs
     # ~/.ssh/config: ssh_config
